# py-type-parse

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/philiprehberger_type_parse/: __init__.py
tests/: test_import.py
