[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-type-parse"
version = "0.1.2"
description = "Parse strings into Python types intelligently — booleans, numbers, dates, None, lists"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["parse", "type", "convert", "string", "bool", "date"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-type-parse"
Repository = "https://github.com/philiprehberger/py-type-parse"
Issues = "https://github.com/philiprehberger/py-type-parse/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_type_parse"]
